rotatelogs: sync with trunk to pick up

enhanced error logging:
      http://svn.apache.org/viewvc?view=rev&revision=646845
    -f option to create logfile ASAP:
      http://svn.apache.org/viewvc?view=rev&revision=632355
    PR 40183. Don't leak memory when reopening the logfile:
      http://svn.apache.org/viewvc?view=rev&revision=615901
    avoid extra apr_time_now() calls and code bloat:
       http://svn.apache.org/viewvc?view=rev&revision=600154

Reviewed by: wrowe, covener, trawick



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@654811 13f79535-47bb-0310-9956-ffa450edef68